@@ -7,6 +7,7 @@ Changes in ogl-es (not yet released - will be merged with trunk at some point)
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Add interface for easier access to scrollbars for IGUIListBox, IGUITreeView and IGUITable
 - Fix serializing colors as strings. Was previously mixing up strings with number-arrays and hex color values. Now using hex color values always, but also fixed the the handling when it get's number-array strings.
 - Fix IAttributes::setAttribute implementation for textures (did do nothing before).
 - Added support for separate blending in OpenGL and D3D9 drivers.
@@ -14,6 +15,7 @@ Changes in 1.9 (not yet released)
 - Added BlendFactor field to SMaterial which allow user to set blending factor per SMaterial set call without use EMT_ONETEXTURE_BLEND type.
 - Fixed issue with blending operation set to EBO_NONE and some transparent material types.
 - Add a code profiler (stop-watch style)
+- Add IGUITable::getItemHeight to access item (row) height
 - Add override font to IGUITable
 - IGUITable can now disable the active column.
 - IGUIElement::getElementFromPoint now virtual
